mesa: 0c36aac83252d32dac8c4da2850539bff0b10301 (master 10.4.0-devel) Compiling src\mesa\main\shaderapi.c ... shaderapi.c src\glsl\list.h(535) : error C2143: syntax error : missing ';' before 'type' src\glsl\list.h(535) : error C2143: syntax error : missing ')' before 'type' src\glsl\list.h(536) : error C2065: 'node' : undeclared identifier commit 0c36aac83252d32dac8c4da2850539bff0b10301 Author: Jason Ekstrand <jason.ekstrand@intel.com> Date: Wed Nov 5 13:57:09 2014 -0800 glsl/list: Add an exec_list_validate function This can be very useful for trying to debug list corruptions. Signed-off-by: Jason Ekstrand <jason.ekstrand@intel.com> Reviewed-by: Matt Turner <mattst88@gmail.com>
commit f9fc3949e182cb2da8ce6d8d71f441986795664f Author: Vinson Lee <vlee@freedesktop.org> Date: Fri Nov 7 15:33:41 2014 -0800 glsl/list: Move declaration before code. Fixes MSVC build error. shaderapi.c src\glsl\list.h(535) : error C2143: syntax error : missing ';' before 'type' src\glsl\list.h(535) : error C2143: syntax error : missing ')' before 'type' src\glsl\list.h(536) : error C2065: 'node' : undeclared identifier Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=86025 Signed-off-by: Vinson Lee <vlee@freedesktop.org>
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.