src/glsl/list.h
@@ -524,6 +524,8 @@ exec_node_insert_list_before(struct exec_node *n, struct exec_list *before)
 static inline void
 exec_list_validate(const struct exec_list *list)
 {
+   const struct exec_node *node;
+
    assert(list->head->prev == (const struct exec_node *) &list->head);
    assert(list->tail == NULL);
    assert(list->tail_pred->next == (const struct exec_node *) &list->tail);
@@ -532,7 +534,7 @@ exec_list_validate(const struct exec_list *list)
     * either require C++ or assume the exec_node is embedded in a structure
     * which is not the case for this function.
     */
-   for (const struct exec_node *node = exec_list_get_head_const(list);
+   for (node = exec_list_get_head_const(list);
         !exec_node_is_tail_sentinel(node);
         node = exec_node_get_next_const(node)) {
       assert(node->next->prev == node);
